name:                twilio-ivr

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0


synopsis:            Fluent coroutine monad for interactive voice applications with Twilio

-- A longer description of the package.
-- description:         


homepage:            https://github.com/steven777400/TwilioIVR
license:             MIT
license-file:        LICENSE
author:              Steve Kollmansberger
maintainer:          steve@kolls.net

category:            Web
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  


cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules:     Twilio.IVR, Data.TransientStore, Network.Wai.Twilio.IVR
  
  -- Modules included in this library but not exported.
  -- other-modules:       
   
  other-extensions:    TemplateHaskell, OverloadedStrings, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, ViewPatterns, FlexibleInstances  
  build-depends:       base ==4.*, uuid >=1.3 && <1.4, lens >=4.13 && <4.14, monad-coroutine >=0.9 && <0.10, transformers >=0.4 && <0.5, xml >=1.3 && <1.4, unordered-containers >=0.2 && <0.3, time >=1.5 && <1.6, random >=1.1 && <1.2, wai >=3.0 && <3.1, wai-routes >=0.9 && <0.10, wai-extra >= 3.0 && < 3.1, text >=1.2 && <1.3, http-types >=0.8 && <0.9, path-pieces >=0.2 && <0.3 
  hs-source-dirs:      src 
  default-language:    Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        twilio-ivr, base    == 4.*, hspec   == 2.*,
                        uuid >=1.3 && <1.4, lens >=4.13 && <4.14, monad-coroutine >=0.9 && <0.10, transformers >=0.4 && <0.5, xml >=1.3 && <1.4, unordered-containers >=0.2 && <0.3, time >=1.5 && <1.6, random >=1.1 && <1.2, wai >=3.0 && <3.1, wai-routes >=0.9 && <0.10, text >=1.2 && <1.3, http-types >=0.8 && <0.9, path-pieces >=0.2 && <0.3
  default-language:     Haskell2010    
  
executable ivr-examples
  main-is:              Examples/Main.hs
  hs-source-dirs:       src   
  build-depends:        twilio-ivr, base    == 4.*,
                        warp, wai-handler-fastcgi,
                        uuid >=1.3 && <1.4, lens >=4.13 && <4.14, monad-coroutine >=0.9 && <0.10, transformers >=0.4 && <0.5, xml >=1.3 && <1.4, unordered-containers >=0.2 && <0.3, time >=1.5 && <1.6, random >=1.1 && <1.2, wai >=3.0 && <3.1, wai-routes >=0.9 && <0.10, wai-extra >= 3.0 && < 3.1, text >=1.2 && <1.3, http-types >=0.8 && <0.9, path-pieces >=0.2 && <0.3
  default-language:     Haskell2010      
 
